# HandwrittenCNNwithGUI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint  network_parameter.txt
dlltest/: CMakeLists.txt  dlltestConfig.cmake.in
dlltest/include/: dynamic_lib.h
dlltest/source/: dynamic_lib.cpp
exetest/: CMakeLists.txt  dlltestConfig.cmake.in
exetest/forms/: Point.ui  mainWindow.ui
exetest/include/: Point.h  bmp.h  main.h  mainWindow.h
exetest/src/: Point.cpp  bmp.cpp  main.cpp  mainWindow.cpp
